# asahi-brightness

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: build.yml
packaging/: 99-asahi-brightness.rules  asahi-brightness.service  install.sh
src/: config.rs  curve.rs  daemon.rs  idle.rs  ipc.rs  main.rs  output.rs  ramp.rs  sensor.rs
